--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 numpy = "^1.19.2"
 uk-covid19 = "^1.2.0"
 plotly = "^4.11.0"
+pandas = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
