--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ numpy = "^1.19.2"
 uk-covid19 = "^1.2.0"
 plotly = "^4.11.0"
 pandas = "^1.1.3"
+gunicorn = "^20.0.4"
+dash = "^1.17.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
