--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ plotly = "^4.11.0"
 pandas = "^1.1.3"
 gunicorn = "^20.0.4"
 dash = "^1.17.0"
+xlrd = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
