--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "covid19-data"
+name = "src"
 version = "0.1.0"
 description = ""
-authors = ["Jonathan Chow <jonathan@cychow.co.uk"]
+authors = ["Jonathan Chow <jonathan@cychow.co.uk>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -16,6 +16,9 @@ xlrd = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+
+[tool.poetry.scripts]
+dashboard = "src.dashboard:start"
 
 [build-system]
 requires = ["poetry>=0.12"]
